--- a/index.html
+++ b/index.html
@@ -1,217 +1,258 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>Find security vulnerabilities through code review</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/simple.css">
-		<link rel="stylesheet" href="css/custom.css">
+  <title>Find security vulnerabilities through code review</title>
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/github.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/reveal.css">
+  <link rel="stylesheet" href="css/theme/simple.css">
+  <link rel="stylesheet" href="css/custom.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section data-markdown>
-						<textarea data-template data-separator-notes="^Note:">
-						## Find security vulnerabilities through code review
+  <!-- Theme used for syntax highlighting of code -->
+  <link rel="stylesheet" href="lib/css/github.css">
 
-						Klaus Purer, [jobiqo.com](https://www.jobiqo.com)
+  <!-- Printing and PDF exports -->
+  <script>
+    var link = document.createElement('link');
+    link.rel = 'stylesheet';
+    link.type = 'text/css';
+    link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
+    document.getElementsByTagName('head')[0].appendChild(link);
+  </script>
+</head>
 
-						[drupal.org/u/klausi](https://www.drupal.org/u/klausi)
+<body>
+  <div class="reveal">
+    <div class="slides">
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+            ## Find security vulnerabilities through code review
 
-						<p>
-						<a href="https://mastodon.social/@klausi">
-						<svg class="svg-icon" viewBox="0 0 216.4144 232.00976">
-								<path fill="#2b90d9" d="M211.80734 139.0875c-3.18125 16.36625-28.4925 34.2775-57.5625 37.74875-15.15875 1.80875-30.08375 3.47125-45.99875 2.74125-26.0275-1.1925-46.565-6.2125-46.565-6.2125 0 2.53375.15625 4.94625.46875 7.2025 3.38375 25.68625 25.47 27.225 46.39125 27.9425 21.11625.7225 39.91875-5.20625 39.91875-5.20625l.8675 19.09s-14.77 7.93125-41.08125 9.39c-14.50875.7975-32.52375-.365-53.50625-5.91875C9.23234 213.82 1.40609 165.31125.20859 116.09125c-.365-14.61375-.14-28.39375-.14-39.91875 0-50.33 32.97625-65.0825 32.97625-65.0825C49.67234 3.45375 78.20359.2425 107.86484 0h.72875c29.66125.2425 58.21125 3.45375 74.8375 11.09 0 0 32.975 14.7525 32.975 65.0825 0 0 .41375 37.13375-4.59875 62.915"/>
-								<path fill="#fff" d="M177.50984 80.077v60.94125h-24.14375v-59.15c0-12.46875-5.24625-18.7975-15.74-18.7975-11.6025 0-17.4175 7.5075-17.4175 22.3525v32.37625H96.20734V85.42325c0-14.845-5.81625-22.3525-17.41875-22.3525-10.49375 0-15.74 6.32875-15.74 18.7975v59.15H38.90484V80.077c0-12.455 3.17125-22.3525 9.54125-29.675 6.56875-7.3225 15.17125-11.07625 25.85-11.07625 12.355 0 21.71125 4.74875 27.8975 14.2475l6.01375 10.08125 6.015-10.08125c6.185-9.49875 15.54125-14.2475 27.8975-14.2475 10.6775 0 19.28 3.75375 25.85 11.07625 6.36875 7.3225 9.54 17.22 9.54 29.675"/>
-							</svg>
-							klausi@mastodon.social
-						</a>
-						</p>
+            Klaus Purer, [jobiqo.com](https://www.jobiqo.com)
 
-						<a href="https://twitter.com/_klausi_">
-							<svg class="svg-icon" viewBox="0 0 400 400"><defs><style>.cls-1{fill:none;}.cls-2{fill:#1da1f2;}</style></defs><title>Twitter_Logo_Blue</title><rect class="cls-1" width="400" height="400"/><path class="cls-2" d="M153.62,301.59c94.34,0,145.94-78.16,145.94-145.94,0-2.22,0-4.43-.15-6.63A104.36,104.36,0,0,0,325,122.47a102.38,102.38,0,0,1-29.46,8.07,51.47,51.47,0,0,0,22.55-28.37,102.79,102.79,0,0,1-32.57,12.45,51.34,51.34,0,0,0-87.41,46.78A145.62,145.62,0,0,1,92.4,107.81a51.33,51.33,0,0,0,15.88,68.47A50.91,50.91,0,0,1,85,169.86c0,.21,0,.43,0,.65a51.31,51.31,0,0,0,41.15,50.28,51.21,51.21,0,0,1-23.16.88,51.35,51.35,0,0,0,47.92,35.62,102.92,102.92,0,0,1-63.7,22A104.41,104.41,0,0,1,75,278.55a145.21,145.21,0,0,0,78.62,23"/></svg>
-							twitter.com/_klausi_
-						</a>
+            [drupal.org/u/klausi](https://www.drupal.org/u/klausi)
 
-						Drupalcon Amsterdam 2019
-						</textarea>
-				</section>
-				<section>
-						<style>
-								.container{
-										display: flex;
-								}
-								.col{
-										flex: 1;
-								}
-								</style>
-						<h2>Goals of code review</h2>
+            <p>
+            <a href="https://mastodon.social/@klausi">
+            <svg class="svg-icon" viewBox="0 0 216.4144 232.00976">
+                <path fill="#2b90d9" d="M211.80734 139.0875c-3.18125 16.36625-28.4925 34.2775-57.5625 37.74875-15.15875 1.80875-30.08375 3.47125-45.99875 2.74125-26.0275-1.1925-46.565-6.2125-46.565-6.2125 0 2.53375.15625 4.94625.46875 7.2025 3.38375 25.68625 25.47 27.225 46.39125 27.9425 21.11625.7225 39.91875-5.20625 39.91875-5.20625l.8675 19.09s-14.77 7.93125-41.08125 9.39c-14.50875.7975-32.52375-.365-53.50625-5.91875C9.23234 213.82 1.40609 165.31125.20859 116.09125c-.365-14.61375-.14-28.39375-.14-39.91875 0-50.33 32.97625-65.0825 32.97625-65.0825C49.67234 3.45375 78.20359.2425 107.86484 0h.72875c29.66125.2425 58.21125 3.45375 74.8375 11.09 0 0 32.975 14.7525 32.975 65.0825 0 0 .41375 37.13375-4.59875 62.915"/>
+                <path fill="#fff" d="M177.50984 80.077v60.94125h-24.14375v-59.15c0-12.46875-5.24625-18.7975-15.74-18.7975-11.6025 0-17.4175 7.5075-17.4175 22.3525v32.37625H96.20734V85.42325c0-14.845-5.81625-22.3525-17.41875-22.3525-10.49375 0-15.74 6.32875-15.74 18.7975v59.15H38.90484V80.077c0-12.455 3.17125-22.3525 9.54125-29.675 6.56875-7.3225 15.17125-11.07625 25.85-11.07625 12.355 0 21.71125 4.74875 27.8975 14.2475l6.01375 10.08125 6.015-10.08125c6.185-9.49875 15.54125-14.2475 27.8975-14.2475 10.6775 0 19.28 3.75375 25.85 11.07625 6.36875 7.3225 9.54 17.22 9.54 29.675"/>
+              </svg>
+              klausi@mastodon.social
+            </a>
+            </p>
 
-							<div class="container">
+            <a href="https://twitter.com/_klausi_">
+              <svg class="svg-icon" viewBox="0 0 400 400"><defs><style>.cls-1{fill:none;}.cls-2{fill:#1da1f2;}</style></defs><title>Twitter_Logo_Blue</title><rect class="cls-1" width="400" height="400"/><path class="cls-2" d="M153.62,301.59c94.34,0,145.94-78.16,145.94-145.94,0-2.22,0-4.43-.15-6.63A104.36,104.36,0,0,0,325,122.47a102.38,102.38,0,0,1-29.46,8.07,51.47,51.47,0,0,0,22.55-28.37,102.79,102.79,0,0,1-32.57,12.45,51.34,51.34,0,0,0-87.41,46.78A145.62,145.62,0,0,1,92.4,107.81a51.33,51.33,0,0,0,15.88,68.47A50.91,50.91,0,0,1,85,169.86c0,.21,0,.43,0,.65a51.31,51.31,0,0,0,41.15,50.28,51.21,51.21,0,0,1-23.16.88,51.35,51.35,0,0,0,47.92,35.62,102.92,102.92,0,0,1-63.7,22A104.41,104.41,0,0,1,75,278.55a145.21,145.21,0,0,0,78.62,23"/></svg>
+              twitter.com/_klausi_
+            </a>
 
-							<div class="col">
-								<ul>
-								<li>Find problems before they hit production</li>
-								<li>Identify vulnerabilities before they get exploited</li>
-								<li>Knowledge transfer from reviewer feedback</li>
-								<li>Save cost by preventing problems</li>
-								</ul>
-							</div>
+            Drupalcon Amsterdam 2019
+            </textarea>
+      </section>
+      <section>
+        <style>
+          .container {
+            display: flex;
+          }
 
-							<div class="col">
-								<img src="drupal_review.png">
-							</div>
+          .col {
+            flex: 1;
+          }
 
-							</div>
+        </style>
+        <h2>Goals of code review</h2>
 
-				</section>
-				<section data-markdown>
-					<textarea data-template data-separator-notes="^Note:">
-						## Drupal 8 module layout
-						<pre>
-						pants
-						+-- src
-						|   +-- PantsController.php
-						+-- pants.install
-						+-- pants.links.menu.yml
-						+-- pants.module
-						+-- pants.routing.yml
-						+-- pants.services.yml
-						+-- pants.token.inc
-						</pre>
+        <div class="container">
 
-					</textarea>
-				</section>
+          <div class="col">
+            <ul>
+              <li>Find problems before they hit production</li>
+              <li>Identify vulnerabilities before they get exploited</li>
+              <li>Knowledge transfer from reviewer feedback</li>
+              <li>Save cost by preventing problems</li>
+            </ul>
+          </div>
 
-				<section data-markdown>
-						<textarea data-template data-separator-notes="^Note:">
-							## Attack entry point: Routing
-							<pre>
-							pants
-							+-- src
-							|   +-- PantsController.php
-							+-- pants.install
-							+-- pants.links.menu.yml
-							+-- pants.module
-							<strong>+-- pants.routing.yml</strong>
-							+-- pants.services.yml
-							+-- pants.token.inc
-							</pre>
+          <div class="col">
+            <img src="drupal_review.png">
+          </div>
 
-						</textarea>
-				</section>
+        </div>
 
-				<section data-markdown>
-					<textarea data-template data-separator-notes="^Note:">
-						## Access Bypass in a route<!-- .element: class="fragment" -->
-						pants.routing.yml
-						```yml
-						pants.admin:
-							path: '/admin/pants'
-							defaults:
-								_form: '\Drupal\pants\AdminForm'
-							requirements:
-								_permission: 'access content'
-							options:
-								_admin_route: TRUE
-						```
-						The permission "access content" is probably not correct for an admin page!<!-- .element: class="fragment" -->
+      </section>
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+            ## Drupal 8 module layout
+            <pre>
+            pants
+            +-- src
+            |   +-- PantsController.php
+            +-- pants.install
+            +-- pants.links.menu.yml
+            +-- pants.module
+            +-- pants.routing.yml
+            +-- pants.services.yml
+            +-- pants.token.inc
+            </pre>
 
-						[OWASP A5-Broken Access Control](https://www.owasp.org/index.php/Top_10-2017_A5-Broken_Access_Control)<!-- .element: class="fragment" -->
-					</textarea>
-				</section>
+          </textarea>
+      </section>
 
-				<section data-markdown>
-					<textarea data-template data-separator-notes="^Note:">
-						## Access Bypass in a route (2)
-						pants.routing.yml
-						```yml
-						pants.admin:
-							path: '/admin/pants'
-							defaults:
-								_form: '\Drupal\pants\AdminForm'
-							requirements:
-								_access: 'TRUE'
-							options:
-								_admin_route: TRUE
-						```
-						Really dangerous, any attacker can access this admin path!
-					</textarea>
-				</section>
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+              ## Attack entry point: Routing
+              <pre>
+              pants
+              +-- src
+              |   +-- PantsController.php
+              +-- pants.install
+              +-- pants.links.menu.yml
+              +-- pants.module
+              <strong>+-- pants.routing.yml</strong>
+              +-- pants.services.yml
+              +-- pants.token.inc
+              </pre>
 
-				<section data-markdown>
-					<textarea data-template data-separator-notes="^Note:">
-						## CSRF in a route<!-- .element: class="fragment" -->
-						pants.routing.yml
-						```yml
-						pants.delete:
-							path: '/pants/delete/{pants}'
-							defaults:
-								_controller: '\Drupal\pants\DeleteController::delete'
-							requirements:
-								_permission: 'delete pants'
-						```
-						src/DeleteController.php
-						```php
-						class DeleteController extends ControllerBase {
-							public function delete(Pants $pants) {
-								$pants->delete();
-								return ['#markup' => 'Pants deleted successfully!'];
-							}
-						}
-						```
-					</textarea>
-				</section>
+            </textarea>
+      </section>
 
-				<section data-markdown>
-					<textarea data-template data-separator-notes="^Note:">
-						## Cross Site Request Forgery (CSRF)
-						An attacker tricks you to visit her HTML page:
-						```html
-						<img src="https://yourdrupal.org/pants/delete/5">
-						```
-						1. Your browser thinks this is an image and fetches it
-						2. It sends your session cookie along
-						3. The Pants delete controller executes
-						4. Pants 5 are deleted behind your back!
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+            ## Access Bypass in a route<!-- .element: class="fragment" -->
+            pants.routing.yml
+            ```yml
+            pants.admin:
+              path: '/admin/pants'
+              defaults:
+                _form: '\Drupal\pants\AdminForm'
+              requirements:
+                _permission: 'access content'
+              options:
+                _admin_route: TRUE
+            ```
+            The permission "access content" is probably not correct for an admin page!<!-- .element: class="fragment" -->
 
-						Solution: confirmation forms or CSRF tokens in the URL/request
-					</textarea>
-				</section>
+            [OWASP A5-Broken Access Control](https://www.owasp.org/index.php/Top_10-2017_A5-Broken_Access_Control)<!-- .element: class="fragment" -->
+          </textarea>
+      </section>
 
-			</div>
-		</div>
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+            ## Access Bypass in a route (2)
+            pants.routing.yml
+            ```yml
+            pants.admin:
+              path: '/admin/pants'
+              defaults:
+                _form: '\Drupal\pants\AdminForm'
+              requirements:
+                _access: 'TRUE'
+              options:
+                _admin_route: TRUE
+            ```
+            Really dangerous, any attacker can access this admin path!
+          </textarea>
+      </section>
 
-		<script src="js/reveal.js"></script>
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+            ## CSRF in a route<!-- .element: class="fragment" -->
+            pants.routing.yml
+            ```yml
+            pants.delete:
+              path: '/pants/delete/{pants}'
+              defaults:
+                _controller: '\Drupal\pants\DeleteController::delete'
+              requirements:
+                _permission: 'delete pants'
+            ```
+            src/DeleteController.php
+            ```php
+            class DeleteController extends ControllerBase {
+              public function delete(Pants $pants) {
+                $pants->delete();
+                return ['#markup' => 'Pants deleted successfully!'];
+              }
+            }
+            ```
+          </textarea>
+      </section>
 
-		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
-			Reveal.initialize({
-				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true }
-				]
-			});
-		</script>
-	</body>
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+            ## Cross Site Request Forgery (CSRF)
+            An attacker tricks you to visit her HTML page:
+            ```html
+            <img src="https://yourdrupal.org/pants/delete/5">
+            ```
+            1. Your browser thinks this is an image and fetches it
+            2. It sends your session cookie along
+            3. The Pants delete controller executes
+            4. Pants 5 are deleted behind your back!
+
+            Solution: confirmation forms or CSRF tokens in the URL/request
+          </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+            ## Drupal 7: hook_menu()
+            Wrong permission
+            ```php
+            function pants_menu() {
+              $items['admin/pants'] = array(
+                'title' => 'Pants',
+                'page callback' => 'drupal_get_form',
+                'page arguments' => array('pants_admin_form'),
+                'access arguments' => array('access content'),
+              );
+              return $items;
+            }
+            ```
+          </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+              ## Drupal 7: hook_menu()
+              No access control at all
+              ```php
+              function pants_menu() {
+                $items['admin/pants'] = array(
+                  'title' => 'Pants',
+                  'page callback' => 'drupal_get_form',
+                  'page arguments' => array('pants_admin_form'),
+                  'access callback' => TRUE,
+                );
+                return $items;
+              }
+              ```
+            </textarea>
+      </section>
+
+    </div>
+  </div>
+
+  <script src="js/reveal.js"></script>
+
+  <script>
+    // More info about config & dependencies:
+    // - https://github.com/hakimel/reveal.js#configuration
+    // - https://github.com/hakimel/reveal.js#dependencies
+    Reveal.initialize({
+      dependencies: [
+        { src: 'plugin/markdown/marked.js' },
+        { src: 'plugin/markdown/markdown.js' },
+        { src: 'plugin/notes/notes.js', async: true },
+        { src: 'plugin/highlight/highlight.js', async: true }
+      ]
+    });
+  </script>
+</body>
+
 </html>
