Typo, note clarification

--- a/index.html
+++ b/index.html
@@ -670,10 +670,10 @@
             </article>
             ```
 
-            Review templates if the raw filter is used correcty.<!-- .element: class="fragment" -->
+            Review templates if the raw filter is used correctly.<!-- .element: class="fragment" -->
 
             Note:
-            * All variable embedding here is fine because Twig auto-escaping is enabled
+            * All variable embedding except for the one with "raw" here is fine because Twig auto-escaping is enabled
         </textarea>
       </section>
 
